# frame-averaging-pytorch

./: pyproject.toml
frame_averaging_pytorch/: frame_averaging.py
