[project]
name = "frame-averaging-pytorch"
version = "0.1.2"
description = "Frame Averaging"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.7"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'geometric learning',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
]

dependencies = [
    "torch>=1.10",
    "einops>=0.6.0",
]

[project.urls]
Homepage = "https://pypi.org/project/frame-averaging-pytorch/"
Repository = "https://github.com/lucidrains/frame-averaging-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["frame_averaging_pytorch"]
